# actr

./: .gitignore  AGENTS.md  Cargo.toml  README.md
actrix/: AGENTS.md  Cargo.toml  README.md  config.example.toml
actrix/.github/workflows/: ci.yml
actrix/crates/actrix-proto/proto/: common.proto  supervised.proto
actrix/crates/actrixd/: Cargo.toml  build.rs
actrix/crates/actrixd/src/: cli.rs  main.rs
actrix/crates/actrixd/tests/: actrix_fullstack.rs  actrix_process.rs
actrix/crates/ais/: Cargo.toml
actrix/crates/ais/src/: issuer.rs
actrix/crates/ais/tests/: README.md  integration_test.rs
actrix/crates/common/: Cargo.toml
actrix/crates/contracts/proto/: common.proto  keyserver.proto  node_admin.proto
actrix/crates/contracts/src/: lib.rs
actrix/crates/control/src/: auth.rs  lib.rs  realm.rs  service.rs
actrix/crates/ks/: Cargo.toml
actrix/crates/ks/src/: config.rs  handlers.rs  lib.rs
actrix/crates/ks/tests/: grpc_integration.rs  http_integration.rs
actrix/crates/mfr/src/: error.rs  manager.rs  tests.rs
actrix/crates/platform/: Cargo.toml
actrix/crates/services/ais/: Cargo.toml
actrix/crates/services/turn/: Cargo.toml
actrix/crates/signaling/: Cargo.toml
actrix/crates/signaling/src/: ais_client.rs  axum_router.rs  compatibility_cache.rs  server.rs  service_registry.rs  service_registry_storage.rs
actrix/crates/signaling/tests/: integration_test.rs
actrix/crates/signer/: Cargo.toml
actrix/crates/supervit/src/: realm.rs  service.rs
actrix/crates/supervit/tests/: supervised_service_integration.rs  supervisor_integration.rs
actrix/crates/turn/: Cargo.toml
actrix/crates/turn/src/: authenticator.rs  lib.rs
actrix/deploy/: Cargo.toml
actrix/deploy/src/cli/: args.rs
actrix/deploy/src/system/: firewall.rs
actrix/docs/: DEVELOPMENT.md
actrix/src/: main.rs
actrix/src/service/: container.rs  manager.rs  mod.rs
actrix/src/service/grpc/: ks.rs
actrix/src/service/http/: ais.rs  ks.rs  mod.rs
actrix/src/service/ice/: turn.rs
actrix/tests/: actrix_cli.rs  actrix_fullstack.rs  actrix_process.rs  supervisord_grpc_integration.rs
bindings/ffi/: AGENTS.md  Cargo.toml  README.md
bindings/ffi/src/: context.rs  runtime.rs  types.rs  workload.rs
bindings/python/actr-workload/: .gitignore  README.md  pyproject.toml  setup.py
bindings/typescript/: Cargo.toml  package-lock.json  package.json
bindings/typescript/actr-workload/: package-lock.json  package.json
bindings/typescript/actr-workload/src/: componentize.ts  host-imports.d.ts  index.ts
bindings/typescript/actr-workload/test/: host-imports.ts  index.test.ts
bindings/typescript/src/: runtime.rs
bindings/web/: Cargo.toml
cli/: Cargo.toml  build.rs
cli/fixtures/swift/: ActrService.swift.hbs  ActrService.swift.init.hbs  HandlerImpl.swift.hbs
cli/src/: test_support.rs
cli/src/commands/: build.rs  config.rs  doc.rs  process.rs
cli/src/core/: error.rs  pipelines.rs
cli/tests/: build_script_web_assets.rs  coverage_cli_commands.rs  e2e_swift_echo.rs  e2e_typescript_generated_echo_web.rs  kotlin_echo.rs  swift_echo.rs  typescript_gen_scenarios.rs
core/config/: Cargo.toml
core/framework/: Cargo.toml
core/framework/src/: context.rs  dest.rs  lib.rs  test_support.rs
core/framework/wit/: actr-workload.wit
core/framework/wit-v2/: actr-workload.wit
core/hyper/: Cargo.toml  build.rs
core/hyper/benches/: dispatch_throughput.rs
core/hyper/src/: actr_ref.rs  ais_client.rs  config.rs  config_tests.rs  context.rs  context_tests.rs  executor.rs  executor_tests.rs  lib.rs  observability.rs  resource.rs  workload.rs  workload_tests.rs
core/hyper/tests/: cleanup_during_request.rs  component_model_dispatch.rs  dispatch_concurrency_e2e.rs  dispatch_isomorphism.rs  dynclib_actor_e2e.rs  ice_restart_with_signaling_disruption.rs  legacy_package_rejection.rs  mobile_full_disconnect_recovery.rs  mobile_network_event_scenarios.rs  network_event_debounce.rs  network_event_handling.rs  node_start_smoke.rs  outproc_connection_rebuild.rs  outproc_disconnect_reconnect.rs  outproc_stale_transport_stream.rs  outproc_stale_webrtc_ready_state.rs  package_hooks.rs  reproduce_sctp_race_condition.rs  retry_backoff.rs  retry_behavior.rs  retry_core_mechanics.rs  retry_dedup.rs  signaling_pending_replies.rs  source_actor_inproc.rs  trace_propagation.rs  v1_synclift_compat.rs  wasm_actor_fixture.rs  wasm_open_concurrency.rs  webrtc_initial_connection_timeout.rs  webrtc_large_data_transfer.rs  webrtc_large_mobile_recovery.rs
core/pack/: Cargo.toml
core/pack/src/: lib.rs  load.rs  util.rs  verify.rs
core/platform-native/: Cargo.toml
core/platform-traits/: Cargo.toml
core/protocol/: Cargo.toml  build.rs
core/protocol/proto/: package.proto
core/runtime/: Cargo.toml
core/runtime-mailbox/: Cargo.toml
core/service-compat/: Cargo.toml
e2e/: Cargo.toml
e2e/package-runtime-echo/: run.sh
e2e/package-runtime-echo/config/: server-runtime.toml.tpl
e2e/polyglot-echo/: .gitignore  README.md  run.sh
e2e/polyglot-echo/config/: client-runtime.toml.tpl  linked-rust-runtime.toml.tpl  server-runtime.toml.tpl
e2e/polyglot-echo/lib/: common.sh  setup.sh
e2e/polyglot-echo/proto/: echo.proto  echo_stream.proto
e2e/polyglot-echo/server/: Cargo.toml  build.rs  manifest.toml
e2e/polyglot-echo/services/: README.md
e2e/swift-datastream-app/: run.sh
e2e/swift-echo-app/: README.md  run.sh
e2e/swift-echo-app/EchoApp/: ActrService.swift
e2e/swift-ts-workload/: README.md  actr.toml.tpl  manifest.toml  run.sh
e2e/swift-ts-workload/SwiftTsWorkloadApp/: Info.plist
e2e/swift-ts-workload/lib/: readiness.sh
e2e/swift-ts-workload/service-src/: actr_service.ts  duplex_echo.proto  package.json  tsconfig.json
e2e/typescript-stream/: run.sh
examples/rust/: Cargo.toml
examples/rust/data-stream/: README.md
examples/rust/echo-actr/: Cargo.toml
examples/rust/package-echo/: README.md
testing/mock-actrix/: Cargo.toml
testing/mock-actrix/src/: lib.rs  signaling.rs  state.rs
tools/wit-compile-web/: Cargo.toml
tools/wit-lint/: Cargo.toml
tools/wit-lint/src/: mapping.rs
(+363 files in other folders)
