[package]
name = "actr"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Actor-RTC: A WebRTC-native actor framework for distributed real-time systems"
keywords = ["actor", "webrtc", "distributed", "realtime", "p2p"]
categories = ["network-programming", "asynchronous", "web-programming"]
readme = "README.md"
include = [
    "/Cargo.toml",
    "/README.md",
    "/src/**",
]

[lints]
workspace = true

[dependencies]
# Core dependencies - all re-exported
actr-protocol.workspace = true
actr-framework.workspace = true
actr-runtime = { workspace = true, optional = true }
actr-hyper = { workspace = true, optional = true }
actr-config = { workspace = true, optional = true }

# Common dependencies
async-trait.workspace = true

[features]
default = ["runtime", "config"]

# Runtime support - includes the full ActrNode/ActrRef runtime
runtime = ["dep:actr-runtime", "dep:actr-hyper", "config"]

# Config support - includes configuration file parsing
config = ["dep:actr-config"]

# Full feature set
full = ["runtime", "config", "opentelemetry"]

# OpenTelemetry observability
opentelemetry = [
    "runtime",
    "actr-hyper/opentelemetry",
    "actr-config/opentelemetry",
]

[workspace]
resolver = "2"
members = [
    # === Core Crates ===
    "core/protocol",
    "core/service-compat",
    "core/config",
    "core/framework",
    "core/hyper",
    "core/runtime",
    "core/runtime-mailbox",
    "core/platform-traits",
    "core/platform-native",
    "core/pack",
    # === Developer Tools ===
    "tools/protoc-gen/rust",
    "tools/protoc-gen/web",
    "tools/wit-compile-web",
    "tools/wit-lint",
    # === CLI ===
    "cli",
    # === Language Bindings (Rust FFI) ===
    "bindings/ffi",
    # === Testing Utilities ===
    "testing/mock-actrix",
    "testing/error-fixture",
    # === actrix server (imported) ===
    "actrix/crates/*",
]

# === Excluded from Cargo workspace ===
# - examples: independent workspaces simulating external users
# - bindings/{python,typescript,swift,kotlin}: non-Rust build systems
# - tools/protoc-gen/{typescript,python,swift,kotlin}: non-Rust plugins
exclude = [
    "examples/rust/*",
    "examples/audio-capture/*",
    "bindings/web",
    "bindings/python",
    "bindings/typescript",
    "bindings/swift",
    "bindings/kotlin",
    "tools/protoc-gen/typescript",
    "tools/protoc-gen/python",
    "tools/protoc-gen/swift",
    "tools/protoc-gen/kotlin",
    # actrix/deploy is an independent sub-workspace (own [workspace])
    "actrix/deploy",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/Actrium/actr"
authors = ["Actor-RTC Contributors"]

[workspace.lints.clippy]
collapsible_if = "allow"
collapsible_else_if = "allow"

[workspace.dependencies]
# === Internal Dependencies ===
actr-protocol = { path = "core/protocol", version = "0.5.0" }
proto-fingerprint = "0.1.0"
actr-service-compat = { path = "core/service-compat", version = "0.5.0" }
actr-config = { path = "core/config", version = "0.5.0" }
actr-framework = { path = "core/framework", version = "0.5.0" }
actr-framework-protoc-codegen = { path = "tools/protoc-gen/rust", version = "0.5.0" }
actr-runtime = { path = "core/runtime", version = "0.5.0" }
actr-runtime-mailbox = { path = "core/runtime-mailbox", version = "0.5.0" }
actr-hyper = { path = "core/hyper", version = "0.5.0" }
actr-platform-traits = { path = "core/platform-traits", version = "0.5.0" }
actr-platform-native = { path = "core/platform-native", version = "0.5.0" }
actr-pack = { path = "core/pack", version = "0.5.0" }
actr-mock-actrix = { path = "testing/mock-actrix", version = "0.5.0" }

# === Async Runtime ===
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# === Serialization ===
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
bytes = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
toml = "1.0.6"

# === Utilities ===
uuid = { version = "1.18", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
pwrzv = "0.6.2"

# === Logging ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# === Observability ===
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.31"

# === WebRTC (WebRTC) ===
webrtc = "0.14"

# === actrix server deps (imported) ===
turn_crate = { package = "turn", version = "0.11.0" }
webrtc-util = "0.12.0"
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
axum = { version = "0.8.7", features = ["json", "macros"] }
rustls = { version = "0.23" }
rustls-pki-types = "1.0.0"
tokio-rustls = { version = "0.26.2", features = ["logging"] }
rustls-pemfile = "2.0.0"
nonce-auth = { version = "0.6.3" }
ecies = { version = "0.2", features = ["std"] }
reqwest = { version = "0.12.24", features = ["json"] }
serial_test = "3.0"
hex = "0.4.3"
hmac = "0.12"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
] }

# === Cryptography ===
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# === Storage ===
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# === WASM Runtime ===
# Pinned to 46.0.1 for Component Model host execution. 46 requires rustc >=
# 1.94 (workspace MSRV is 1.95, so satisfied) and carries the fix for
# GHSA-4ch3-9j33-3pmj, so do NOT drop back to 46.0.0.
#
# The `async` feature powers the host-side wasmtime fibers we rely on
# (`instantiate_async` / `call_async`); `component-model-async` stays enabled
# as forward wiring for the M4 async world (the host still runs the 0.1.0
# synchronous WIT world with a `&mut Store` serial dispatch here).
#
# NB (M3): guest components are now lifted *synchronously* (wit-bindgen 0.58
# with `async: true` removed). wasmtime 46's embedded wasmparser rejects the
# async canonical option on sync WIT function types, so pre-46 async-lift
# `.actr` binaries no longer load; WasmHost::compile maps that error to a
# rebuild-with-current-SDK diagnostic.
#
# `default-features = false` keeps the feature set minimal: 46's new default
# `gc-copying` / `wit-parser` features are not pulled in and are not needed.
wasmtime = { version = "=46.0.1", default-features = false, features = [
    "runtime",
    "cranelift",
    "component-model",
    "component-model-async",
    "async",
] }
wasmtime-wasi = "=46.0.1"

# === Networking ===
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-native-roots",
    "rustls-tls-webpki-roots",
] }
tokio-test = "0.4"
dashmap = "5.5"
crossbeam = "0.8"

# === Code Generation ===
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.5"

# === CLI Tools ===
clap = { version = "4.5", features = ["derive", "cargo"] }
fs_extra = "1.3"
tempfile = "3.23"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = false
