[workspace]
members = ["crates/*"]
# supervit 已重构为 gRPC 模式，可以启用
resolver = "2"

[patch.crates-io]
# Use local protocol/framework definitions for development
# actr-protocol = { path = "../actr/crates/protocol" }
# actr-version = { path = "../actr/crates/version" }
# Use remote protocol/framework definitions that include tracing headers
actr-protocol = { git = "https://github.com/actor-rtc/actr.git", rev = "a4fd088b3b774a32aff438fc5d7625af9ae3aa02" }
actr-version = { git = "https://github.com/actor-rtc/actr.git", rev = "a4fd088b3b774a32aff438fc5d7625af9ae3aa02" }

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actor-rtc/actrix"
keywords = ["web-rtc", "signaling", "turn", "stun"]

[workspace.dependencies]
webrtc = { version = "0.14.0" }
turn_crate = { package = "turn", version = "0.11.0" }
webrtc-util = "0.12.0"
tokio = { version = "1.0", features = ["full"] }
# Actor-RTC framework dependencies
actr-protocol = { version = "0.1.3" }
actr-version = { version = "0.1.0" }
prost = "0.14.1"
prost-types = "0.14.1"
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1.43"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = "0.3"
axum = { version = "0.8.7", features = ["json", "macros"] }
uuid = { version = "1", features = ["v4"] }
rustls = { version = "0.23" }
tokio-tungstenite = { version = "0.28.0", features = ["rustls"] }
rustls-pki-types = "1.0.0"
tokio-rustls = { version = "0.26.2", features = ["logging"] }
rustls-pemfile = "2.0.0"
nonce-auth = { version = "0.6.3" }
sha2 = "0.10"
ecies = { version = "0.2", features = ["std"] }
reqwest = { version = "0.12.24", features = ["json"] }
base64 = "0.22.1"
pwrzv = "0.6.2"
chrono = "0.4"
futures-util = "0.3"
serial_test = "3.0"
toml = "0.8"
hex = "0.4.3"
hmac = "0.12"
# Deploy helper dependencies
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
colored = "2.0"
regex = "1.0"
tempfile = "3.10"
dirs = "5.0"
users = "0.11"
local-ip-address = "0.6"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
] }

# OpenTelemetry dependencies for distributed tracing
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-jaeger = { version = "0.22" }
tracing-opentelemetry = { version = "0.32.0" }

[package]
name = "actrix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "WebRTC 辅助服务器集合，包括信令服务、STUN 和 TURN 服务"

[features]
default = []
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-jaeger",
    "dep:tracing-opentelemetry",
    "signaling/opentelemetry",
]

[profile.release]
lto = true

[dependencies]
uuid = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "json",
    "registry",
    "time",
] }
tracing-appender = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum.workspace = true
tower-http = { version = "0.5", features = ["trace", "cors"] }
# Rustls related dependencies
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = "1.0.1"

# Axum related
tokio-util = { version = "0.7.13", features = ["io"] }
axum-server = { version = "0.7.3", default-features = false, features = [
    "tls-rustls",
] }

# 本地依赖（内部crate）
actrix-common = { path = "./crates/common" }
signaling = { path = "./crates/signaling" }
stun = { path = "./crates/stun" }
turn = { path = "./crates/turn" }
ais = { path = "./crates/ais" }
supervit = { path = "./crates/supervit" }
ks = { path = "./crates/ks" }
rand = "0.9.1"
futures = "0.3.31"
num_cpus = "1.16.0"
core_affinity = "0.8.3"
once_cell = "1.21.3"
url = "2.5.4"
tokio-tungstenite = { workspace = true }
hostname = "0.4.0"
hex = { workspace = true }
async-trait = "0.1.88"
strum = { version = "0.26", features = ["derive"] }
toml = { workspace = true }
nonce-auth = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
ecies = { workspace = true }
reqwest = { workspace = true }
typetag = "0.2.20"
pwrzv = { workspace = true }
tonic = { workspace = true }
prometheus = "0.13"
lazy_static = "1.4"

# OpenTelemetry dependencies (optional, enabled by feature)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-jaeger = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

# Unix specific dependencies for privilege dropping
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["user"] }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
urlencoding = "2.1"
base64 = { workspace = true }
libc = "0.2"
actr-protocol = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serial_test = "3.3"
