[workspace]
members = [
    "crates/actrixd",
    "crates/control",
    "crates/contracts",
    "crates/platform",
    "crates/sdk",
    "crates/services/*",
]
resolver = "2"

[patch.crates-io]
# Use actr main branch
actr-protocol = { git = "https://github.com/Actrium/actr.git", rev = "4e7a76ceed44e3a7cd20eee3b132e93298c7738a" }
actr-runtime = { git = "https://github.com/Actrium/actr.git", rev = "4e7a76ceed44e3a7cd20eee3b132e93298c7738a" }
actr-runtime-mailbox = { git = "https://github.com/Actrium/actr.git", rev = "4e7a76ceed44e3a7cd20eee3b132e93298c7738a" }

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/Actrium/actrix"
keywords = ["web-rtc", "signaling", "turn", "stun"]

[workspace.dependencies]
webrtc = { version = "0.14.0" }
turn_crate = { package = "turn", version = "0.11.0" }
webrtc-util = "0.12.0"
tokio = { version = "1.0", features = ["full"] }
# Actr framework dependencies
actr-protocol = { version = "0.2" }
prost = "0.14.1"
prost-types = "0.14.1"
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1.43"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = "0.3"
axum = { version = "0.8.7", features = ["json", "macros"] }
uuid = { version = "1", features = ["v4"] }
rustls = { version = "0.23" }
tokio-tungstenite = { version = "0.28.0", features = ["rustls"] }
rustls-pki-types = "1.0.0"
tokio-rustls = { version = "0.26.2", features = ["logging"] }
rustls-pemfile = "2.0.0"
nonce-auth = { version = "0.6.3" }
sha2 = "0.10"
ecies = { version = "0.2", features = ["std"] }
reqwest = { version = "0.12.24", features = ["json"] }
base64 = "0.22.1"
pwrzv = "0.7.0"
chrono = "0.4"
futures-util = "0.3"
serial_test = "3.0"
toml = "0.8"
hex = "0.4.3"
hmac = "0.12"
tempfile = "3.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
] }

# OpenTelemetry dependencies for distributed tracing
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "http-proto"] }
opentelemetry-jaeger = { version = "0.22" }
tracing-opentelemetry = { version = "0.32.0" }

[profile.release]
lto = true
