[workspace]
members = [
    "package-runtime-echo/client",
    "package-runtime-echo/client-guest",
    "polyglot-echo/clients/rust",
    "polyglot-echo/server",
    "polyglot-echo/services/linked-rust",
]
resolver = "2"

[workspace.package]
version = "0.3.3"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
actr-framework = { version = "0.3.3" }
actr-protocol = { version = "0.3.3" }
actr-runtime = { version = "0.3.3" }
actr-hyper = { version = "0.3.3", features = ["opentelemetry"] }
actr-config = { version = "0.3.3" }
actr-platform-native = { version = "0.3.3" }
actr-pack = { version = "0.3.3" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
prost = "0.14"
bytes = "1.11"
async-trait = "0.1"

[patch.crates-io]
actr = { path = "../" }
actr-framework = { path = "../core/framework" }
actr-protocol = { path = "../core/protocol" }
actr-runtime = { path = "../core/runtime" }
actr-runtime-mailbox = { path = "../core/runtime-mailbox" }
actr-hyper = { path = "../core/hyper" }
actr-config = { path = "../core/config" }
actr-platform-traits = { path = "../core/platform-traits" }
actr-platform-native = { path = "../core/platform-native" }
actr-pack = { path = "../core/pack" }
actr-service-compat = { path = "../core/service-compat" }
