[package]
name = "deploy"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Actrium/actrix"
description = "Bootstrap deployment helper for actrix WebRTC services"

[[bin]]
name = "deploy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[workspace]
