[package]
name = "actrix-deploy"
version = "0.4.0"
publish = false
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Actrium/actrix"
description = "Bootstrap deployment helper for actrix WebRTC services"

[[bin]]
name = "deploy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"

[workspace]
