[package]
name = "libactr"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "actr"

[dependencies]
# actr dependencies (workspace members)
actr-protocol.workspace = true
actr-framework.workspace = true
actr-runtime.workspace = true
actr-hyper = { workspace = true, features = ["opentelemetry"] }
actr-config = { workspace = true, features = ["opentelemetry"] }
actr-pack.workspace = true

# UniFFI
uniffi = { version = "0.30.0", features = ["tokio"] }

# Async runtime
tokio = { version = "1.48", features = ["full", "rt-multi-thread"] }
bytes = "1.10"

# Utilities
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-android = "0.2"
tracing-oslog = { version = "0.2", optional = true }
url = "2.5"
async-trait = "0.1"
parking_lot = "0.12"
futures-util = "0.3.31"
opus = "0.3.1"
audiopus_sys = { version = "0.2", features = ["static"] }

# OpenTelemetry
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.31"

# OpenSSL (vendored for cross-compilation)
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
log = "0.4"

[dev-dependencies]
actr-mock-actrix = { workspace = true }
tempfile.workspace = true

[features]
default = []
opentelemetry = []
macos-oslog = ["tracing-oslog"]
